update all pages with back button and css

--- a/www/css/events_list.css
+++ b/www/css/events_list.css
@@ -41,10 +41,36 @@ body{
 }
 
 /* ========  Content ==============*/
+i {
+    border: solid blue;
+    border-width: 0 7px 7px 0;
+    display: inline-block;
+    padding: 12px;
+}
+.left {
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+.back-button{
+    color:blue;
+}
+.go-back {
+    font-size: 0.5em;
+    border: none;
+    outline: none;
+    background-color: #00a99d;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 60px;
+}
+.go-back:hover {
+    background-color: #555;
+}
 .events-content-title{
     font-size: 3.5em;
-    align-self: flex-end;
-    padding-right: 3vw;
+    justify-content: space-between;
+    width: 94vw;
 }
 .events-content-img{
      width:94vw;
@@ -60,6 +86,7 @@ body{
 }
 .events-content-container{
     max-height: 77vh;
+    width: 94vw;
     justify-content: center;
     background-color: white;
     flex-flow: row wrap;
@@ -143,7 +170,25 @@ body{
     align-self: center;
     padding-left: 10px;
 }
-
+.go-top {
+    font-size: 2em;
+    min-width: 120px;
+    display: none;
+    position: fixed;
+    bottom: 10vh;
+    right: 45px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #00a99d;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 60px;
+}
+.go-top:hover {
+    background-color: #555;
+}
 /* ========  Footer ==============*/
 .events-footer{
     width: 100vw;
